<resources>
    <string name="app_name">OrderHub</string>
    <string name="login_title_text">Order Hub</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_button_text">Đăng nhập</string>
    <string name="login_success_text">Đăng nhập thành công</string>
    <string name="login_fail_text">Email hoặc mật khẩu không đúng</string>
    <string name="error_general">Có lỗi xảy ra</string>
    <string name="item_status_1">Đơn chờ gửi</string>
    <string name="item_status_2">Đã tạo đơn vận chuyển</string>
    <string name="item_status_3">Đã nhận đơn</string>
    <string name="item_status_4">Đang giao</string>
    <string name="item_status_5">Chờ giao lại</string>
    <string name="item_status_6">Đang trả hàng</string>
    <string name="item_status_7">Chờ chuyển COD</string>
    <string name="item_status_8">Hoàn thành</string>
    <string name="item_order_group_title">Đơn theo trạng thái</string>
    <string name="item_add_product">Thêm sản phẩm</string>
    <string name="item_all_orders">Tất cả đơn hàng</string>
    <string name="item_all_products">Tất cả sản phẩm</string>
    <string name="item_log_out">Đăng xuất</string>
    <string name="item_order_button_products_text">Xem sản phẩm</string>
    <string name="item_order_button_detail_text">Xem chi tiết</string>
    <string name="item_order_button_call_text">Gọi điện</string>
    <string name="sample_date">Thu, 17 Mar</string>
    <string name="sample_name">Hoàng Quốc Trung</string>
    <string name="sample_cod">300.000 đ</string>
    <string name="sample_quantity">x 1</string>
    <string name="sample_product_name">Giày vans đỏ</string>
    <string name="sample_price">1.700.000</string>
    <string name="notice_no_order">Hiện tại không có đơn hàng ở trạng thái này</string>
    <string name="menu_item_save">Lưu</string>
    <string name="order_editor_new_order_title">Tạo đơn mới</string>
    <string name="error_load_districts">Can\'t load districts</string>
    <string name="order_editor_title_receiver">Người nhận:</string>
    <string name="order_editor_title_mobile">Số điện thoại:</string>
    <string name="order_editor_title_address">Địa chỉ:</string>
    <string name="order_editor_title_district">Quận/huyện:</string>
    <string name="order_editor_title_ward">Phường/xã:</string>
    <string name="order_editor_title_more_product">Thêm sản phẩm</string>
    <string name="order_editor_title_ship_cost">Phí vận chuyển:</string>
    <string name="order_editor_title_discount">Giảm giá:</string>
    <string name="order_editor_title_total">Tổng cộng:</string>
    <string name="order_editor_title_order_detail">Chi tiết đơn hàng</string>
    <string name="error_loading_wards">Can\'t load wards</string>
    <string name="error_loading_fee">Can\'t calculate fee</string>
    <string name="order_editor_success_saved">Đã lưu đơn hàng!</string>
    <string name="product_quantity_input_title">SL</string>
    <string name="product_name_input_title">Chọn sản phẩm</string>
    <string name="order_editor_product_price_title">Giá</string>
    <string name="order_editor_input_product_confirm">OK</string>
    <string name="order_editor_detail_title">Chi tiết đơn hàng</string>
    <string name="order_editor_edit_order_title">Sửa đơn hàng</string>
    <string name="order_editor_status_title">Trạng thái:</string>
    <string name="order_editor_last_modified_title">Cập nhật lần cuối:</string>
    <string name="order_editor_created_time_title">Ngày tạo:</string>
    <string name="item_menu_select_all">Chọn tất cả</string>
    <string name="order_selection_button_delete">Xoá</string>
    <string name="order_selection_button_create_shipment">Gửi sang HVC</string>
</resources>
