<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_add_product"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_add_product"
            android:title="@string/item_add_product" />
    </group>
    <group
        android:id="@+id/group_order"
        android:checkableBehavior="single">
        <item
            android:checkable="false"
            android:title="@string/item_order_group_title">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/item_status_1"
                        android:title="@string/item_status_1" />
                    <item
                        android:id="@+id/item_status_2"
                        android:title="@string/item_status_2" />
                    <item
                        android:id="@+id/item_status_3"
                        android:title="@string/item_status_3" />
                    <item
                        android:id="@+id/item_status_4"
                        android:title="@string/item_status_4" />
                    <item
                        android:id="@+id/item_status_5"
                        android:title="@string/item_status_5" />
                    <item
                        android:id="@+id/item_status_6"
                        android:title="@string/item_status_6" />
                    <item
                        android:id="@+id/item_status_7"
                        android:title="@string/item_status_7" />
                    <item
                        android:id="@+id/item_status_8"
                        android:title="@string/item_status_8" />
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group_all"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_all_orders"
            android:title="@string/item_all_orders" />
        <item
            android:id="@+id/item_all_products"
            android:title="@string/item_all_products" />
    </group>
</menu>
