<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:padding="@dimen/login_container_padding"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/text_title"
        style="@style/LoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title_text"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/LoginInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_password"
        style="@style/LoginInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_password_margin_top"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        style="@style/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:background="@color/color_secondary"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintStart_toStartOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
