<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.trunghoang.orderhub.ui.inputProduct.InputProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/order_editor_section_padding_vertical"
        tools:context=".ui.inputProduct.InputProductFragment">

        <ImageView
            android:id="@+id/imageProduct"
            image="@{viewModel.photo}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <EditText
            android:id="@+id/editQuantity"
            style="@style/OrderEditorProductInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_editor_input_margin_top"
            android:ems="10"
            android:hint="@string/product_quantity_input_title"
            android:inputType="number"
            longNumber="@={viewModel.quantity}"
            app:layout_constraintEnd_toEndOf="@+id/editName"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/editName"
            style="@style/OrderEditorProductInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_editor_input_margin_top"
            android:dropDownAnchor="@id/editName"
            android:ems="10"
            android:hint="@string/product_name_input_title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProduct" />

        <EditText
            android:id="@+id/editPrice"
            style="@style/OrderEditorProductInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_editor_input_margin_top"
            android:ems="10"
            android:hint="@string/order_editor_product_price_title"
            android:inputType="number"
            longNumber="@={viewModel.price}"
            app:layout_constraintEnd_toEndOf="@+id/editQuantity"
            app:layout_constraintTop_toBottomOf="@+id/editQuantity" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_editor_button_margin_top"
            android:text="@string/order_editor_input_product_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editPrice"
            app:layout_constraintTop_toBottomOf="@id/editPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
