<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintItemOrderProduct"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/item_order_product_margin_vertical"
    android:layout_marginBottom="@dimen/item_order_product_margin_vertical">

    <ImageView
        android:id="@+id/imageProductPhoto"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textName"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_order_product_quantity_margin_left"
        android:layout_marginLeft="@dimen/item_order_product_quantity_margin_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageProductPhoto"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_quantity"
        style="@style/ItemOrderProduct"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_order_product_name_margin_horizontal"
        android:layout_marginLeft="@dimen/item_order_product_name_margin_horizontal"
        android:layout_marginEnd="@dimen/item_order_product_name_margin_horizontal"
        android:layout_marginRight="@dimen/item_order_product_name_margin_horizontal"
        android:paddingTop="@dimen/item_order_product_name_padding_vertical"
        android:paddingBottom="@dimen/item_order_product_name_padding_vertical"
        app:layout_constraintBaseline_toBaselineOf="@+id/textQuantity"
        app:layout_constraintEnd_toStartOf="@+id/textPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textQuantity"
        tools:text="@string/sample_product_name"
        style="@style/ItemOrderProduct"/>

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/sample_price"
        style="@style/ItemOrderProduct"/>
</androidx.constraintlayout.widget.ConstraintLayout>
